--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AWA Writing</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    
+    <header>
+        <h1 class="text-center text-2xl mt-2">"Analytical Writing - GRE"</h1>
+    </header>
+    <main class="bg-black mx-4 mt-2">
+        <section>
+            <div class="grid grid-cols-2">
+                <div class="mt-4 mx-4">
+                    <button class="bg-red-600 px-8 py-2 text-white" id="start-btn">START</button>
+                </div>
+                <div class="mt-4 mx-4">
+                    <button class="bg-blue-600 px-4 py-2 text-white" id="postq-btn">POST QUESTION</button>
+                </div>
+            </div>
+            <div class="grid grid-cols-2">
+                <div>
+                    <textarea class="border-2 m-4" name="" id="answer-area" cols="80" rows="20" disabled>click start button. 30 minutes time</textarea>
+                    <article id="post-answer" class="text-white m-4"></article>
+                </div>
+                <div class="bg-white m-4 ">
+                    <textarea class="border-2" name="" id="question-area" cols="80" rows="20"></textarea>
+                    <article id="post-question" class="m-4"></article>
+                </div>
+            </div>
+        </section>
+    </main>
+    <script src="js/app.js"></script>
 </body>
 </html>
