--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header>
         <h1 class="text-center text-2xl mt-2">"Analytical Writing - GRE"</h1>
     </header>
-    <main class="bg-black mx-4 mt-2">
-        <section>
+    <main class="bg-gray-900 mt-2 h-screen">
+        <section class="mx-4">
             <div class="grid grid-cols-2">
                 <div class="mt-4 mx-4">
                     <button class="bg-red-600 px-8 py-2 text-white" id="start-btn">START</button>
@@ -23,12 +23,13 @@
             </div>
             <div class="grid grid-cols-2">
                 <div>
-                    <textarea class="border-2 m-4" name="" id="answer-area" cols="80" rows="20" disabled>click start button. 30 minutes time</textarea>
+                    <textarea style="resize: none;" class="border-2 m-4 pl-2 pt-2" name="" id="answer-area" cols="80" rows="20" disabled>Click start button to write. You will get 30 minutes time to complete your answer.</textarea>
                     <article id="post-answer" class="text-white m-4"></article>
+                    <p style="display: none;" class="text-white mx-4">WORD COUNT - <span id="word-count"></span></p>
                 </div>
-                <div class="bg-white m-4 ">
-                    <textarea class="border-2" name="" id="question-area" cols="80" rows="20"></textarea>
-                    <article id="post-question" class="m-4"></article>
+                <div>
+                    <textarea style="resize: none;" class="border-2 m-4 p-2" name="" id="question-area" cols="80" rows="20"></textarea>
+                    <article id="post-question" class="bg-white m-4"></article>
                 </div>
             </div>
         </section>
