word count fixed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1 class="text-center text-2xl mt-2">"Analytical Writing - GRE"</h1>
     </header>
-    <main class="bg-gray-900 mt-2 h-screen">
+    <main class="bg-gray-900 mt-2 h-full">
         <section class="mx-4">
             <div class="grid grid-cols-2">
                 <div class="mt-4 mx-4">
@@ -25,7 +25,7 @@
                 <div>
                     <textarea style="resize: none;" class="border-2 m-4 pl-2 pt-2" name="" id="answer-area" cols="80" rows="20" disabled>Click start button to write. You will get 30 minutes time to complete your answer.</textarea>
                     <article id="post-answer" class="text-white m-4"></article>
-                    <p style="display: none;" class="text-white mx-4">WORD COUNT - <span id="word-count"></span></p>
+                    <p style="display: none;" class="text-white m-4">WORD COUNT - <span id="word-count"></span></p>
                 </div>
                 <div>
                     <textarea style="resize: none;" class="border-2 m-4 p-2" name="" id="question-area" cols="80" rows="20"></textarea>
