fixed the timing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1 class="text-center text-2xl mt-2">"Analytical Writing - GRE"</h1>
     </header>
-    <main class="bg-gray-900 mt-2 h-full">
+    <main class="bg-gray-900 mt-2 min-h-screen">
         <section class="mx-4">
             <div class="grid grid-cols-2">
                 <div class="mt-4 mx-4">
