--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1 class="text-center text-2xl mt-2">"Analytical Writing - GRE"</h1>
+        <h1 class="text-center text-2xl mt-2">"IELTS - Writing Task"</h1>
     </header>
     <main class="bg-gray-900 mt-2 min-h-screen">
         <section class="mx-4">
