--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AWA Writing</title>
+    <title>IELTS Writing Task 2</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
-    <header>
+    <header class="flex justify-center align-center">
         <h1 class="text-center text-2xl mt-2">"IELTS - Writing Task"</h1>
+        <button class="bg-green-600 px-8 py-2 ml-5 text-white"><a href="./task1.html">Task 1</a></button>
     </header>
     <main class="bg-gray-900 mt-2 min-h-screen">
         <section class="mx-4">
@@ -24,12 +27,15 @@
             </div>
             <div class="grid grid-cols-2">
                 <div class="mr-8">
-                    <textarea style="resize: none; width: 100%;" class="border-2 m-4 pl-2 pt-2" name="" id="answer-area" cols="80" rows="20" disabled>Click start button to write. You will get 30 minutes time to complete your answer.</textarea>
+                    <textarea style="resize: none; width: 100%;" class="border-2 m-4 pl-2 pt-2" name="" id="answer-area"
+                        cols="80" rows="20"
+                        disabled>Click start button to write. You will get 30 minutes time to complete your answer.</textarea>
                     <article id="post-answer" class="text-white m-4"></article>
                     <p style="display: none;" class="text-white m-4">WORD COUNT - <span id="word-count"></span></p>
                 </div>
                 <div class="w-full">
-                    <textarea style="resize: none; width: 95%;" class="border-2 m-4 p-2" name="" id="question-area" cols="80" rows="20"></textarea>
+                    <textarea style="resize: none; width: 95%;" class="border-2 m-4 p-2" name="" id="question-area"
+                        cols="80" rows="20"></textarea>
                     <article id="post-question" class="bg-white m-4"></article>
                 </div>
             </div>
@@ -37,4 +43,5 @@
     </main>
     <script src="js/app.js"></script>
 </body>
+
 </html>
